Remove kcfg_generate_dbus_interface CMake macro copy
Akonadi provides this as part of it's CMake config file already.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ project(mailcommon VERSION ${PIM_VERSION})
 set(KF5_MIN_VERSION "5.85.0")
 
 find_package(ECM ${KF5_MIN_VERSION} CONFIG REQUIRED)
-set(CMAKE_MODULE_PATH ${mailcommon_SOURCE_DIR}/cmake/modules/ ${ECM_MODULE_PATH})
+set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH})
 
 include(KDEInstallDirs)
 include(KDECMakeSettings)
@@ -86,8 +86,6 @@ ecm_setup_version(PROJECT VARIABLE_PREFIX MAILCOMMON
                         SOVERSION 5
 )
 
-find_package(Xsltproc)
-set_package_properties(Xsltproc PROPERTIES DESCRIPTION "XSLT processor from libxslt" TYPE REQUIRED PURPOSE "Required to generate D-Bus interfaces for all Akonadi resources.")
 
 ########### Targets ###########
 remove_definitions( -DQT_NO_CAST_FROM_ASCII )
