--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -5,11 +5,11 @@ Dependencies:
 - 'on': ['@all']
   'require':
     'frameworks/kdesignerplugin' : '@latest'
-    'kde/pim/akonadi' : '@latest'
-    'kde/pim/akonadi-mime' : '@latest'
-    'kde/pim/kmailtransport' : '@latest'
-    'kde/pim/kmime' : '@latest'
-    'kde/pim/libkdepim' : '@latest'
-    'kde/pim/mailimporter' : '@latest'
-    'kde/pim/messagelib' : '@latest'
-    'kde/pim/pimcommon' : '@latest'
+    'kde/pim/akonadi' : '@same'
+    'kde/pim/akonadi-mime' : '@same'
+    'kde/pim/kmailtransport' : '@same'
+    'kde/pim/kmime' : '@same'
+    'kde/pim/libkdepim' : '@same'
+    'kde/pim/mailimporter' : '@same'
+    'kde/pim/messagelib' : '@same'
+    'kde/pim/pimcommon' : '@same'
