Add hierarchical filtering of folders
This allows filtering a hierarchy of folders with path patterns like
"parent/sub" which matches all folders matching "sub" with parent folders
matching "parent".

Funded by: Intevation GmbH

BUG: 443791
FIXED-IN: 5.19.0

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -140,6 +140,7 @@ target_sources(KF5MailCommon PRIVATE
     folder/entitycollectionorderproxymodel.cpp
     folder/accountconfigorderdialog.cpp
     folder/favoritecollectionorderproxymodel.cpp
+    folder/hierarchicalfoldermatcher.cpp
     job/jobscheduler.cpp
     job/folderjob.cpp
     job/expirejob.cpp
