Allow to show header in qtc6

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -188,6 +188,151 @@ target_sources(KF5MailCommon PRIVATE
     util/resourcereadconfigfile.cpp
     ${libmailcommon_SRCS}
     kernel/mailkernel.cpp
+    job/folderjob.h
+    job/expirejob.h
+    job/jobscheduler.h
+    job/backupjob.h
+    filter/filterselectiondialog.h
+    filter/kmfilteraccountlist.h
+    filter/filterlog.h
+    filter/mdnadvicedialog.h
+    filter/dialog/filteractionmissingidentitydialog.h
+    filter/dialog/filteractionmissingtemplatedialog.h
+    filter/dialog/filteractionmissingaccountdialog.h
+    filter/dialog/filteractionmissingtransportdialog.h
+    filter/dialog/filteractionmissingfolderdialog.h
+    filter/dialog/selectthunderbirdfilterfilesdialog.h
+    filter/dialog/filteractionmissingsoundurldialog.h
+    filter/dialog/filteractionmissingtagdialog.h
+    filter/dialog/selectthunderbirdfilterfileswidget.h
+    filter/invalidfilters/invalidfilterinfo.h
+    filter/invalidfilters/invalidfilterlistitemdelegate.h
+    filter/invalidfilters/invalidfilterlistmodel.h
+    filter/invalidfilters/invalidfilterinfowidget.h
+    filter/invalidfilters/invalidfilterdialog.h
+    filter/invalidfilters/invalidfilterlistview.h
+    filter/invalidfilters/invalidfilterwidget.h
+    filter/kmfilterdialog.h
+    filter/filtermanager.h
+    filter/filterimporter/filterimportersylpheed.h
+    filter/filterimporter/filterimportergmail.h
+    filter/filterimporter/filterimporterprocmail.h
+    filter/filterimporter/filterimporterabstract.h
+    filter/filterimporter/filterimporterclawsmail.h
+    filter/filterimporter/filterimporterthunderbird.h
+    filter/filterimporter/filterimporterbalsa.h
+    filter/filterimporter/filterimporterevolution.h
+    filter/kmfilterlistbox.h
+    filter/filterimporterpathcache.h
+    filter/mailfilter.h
+    filter/filteractions/filteractionexec.h
+    filter/filteractions/filteractionstatus.h
+    filter/filteractions/filteractionredirect.h
+    filter/filteractions/filteractionwithaddress.h
+    filter/filteractions/filteractionunsetstatus.h
+    filter/filteractions/filteractiondict.h
+    filter/filteractions/filteractionwithstring.h
+    filter/filteractions/filteractionsettransport.h
+    filter/filteractions/filteractionaddtag.h
+    filter/filteractions/filteractionaddtoaddressbook.h
+    filter/filteractions/filteractionwithcrypto.h
+    filter/filteractions/filteractionreplyto.h
+    filter/filteractions/filteractionwithnone.h
+    filter/filteractions/filteractionwithurl.h
+    filter/filteractions/filteractionpipethrough.h
+    filter/filteractions/filteractiondelete.h
+    filter/filteractions/filteractionwithtest.h
+    filter/filteractions/filteractionwithuoid.h
+    filter/filteractions/filteractionplaysound.h
+    filter/filteractions/filteractionsetstatus.h
+    filter/filteractions/filteractionwithstringlist.h
+    filter/filteractions/filteraction.h
+    filter/filteractions/filteractionsendreceipt.h
+    filter/filteractions/filteractionsendfakedisposition.h
+    filter/filteractions/filteractionremoveheader.h
+    filter/filteractions/filteractioncopy.h
+    filter/filteractions/filteractionsetidentity.h
+    filter/filteractions/filteractiondecrypt.h
+    filter/filteractions/filteractionencrypt.h
+    filter/filteractions/filteractionmove.h
+    filter/filteractions/filteractionforward.h
+    filter/filteractions/filteractionwidget.h
+    filter/filteractions/filteractionrewriteheader.h
+    filter/filteractions/filteractionwithfolder.h
+    filter/filteractions/filteractionaddheader.h
+    filter/filteractions/filteractionwithcommand.h
+    filter/itemcontext.h
+    filter/filterimporterexporter.h
+    filter/soundtestwidget.h
+    filter/filterconverter/filterconverttosievepurposemenuwidget.h
+    filter/filterconverter/filterconverttosieve.h
+    filter/filterconverter/filterconverttosieveresultdialog.h
+    search/widgethandler/textrulerwidgethandler.h
+    search/widgethandler/rulewidgethandlermanager.h
+    search/widgethandler/daterulewidgethandler.h
+    search/widgethandler/encryptionwidgethandler.h
+    search/widgethandler/numericdoublerulewidgethandler.h
+    search/widgethandler/tagrulewidgethandler.h
+    search/widgethandler/headersrulerwidgethandler.h
+    search/widgethandler/messagerulewidgethandler.h
+    search/widgethandler/statusrulewidgethandler.h
+    search/widgethandler/numericrulewidgethandler.h
+    search/searchrule/searchruledate.h
+    search/searchrule/searchrule.h
+    search/searchrule/searchrulestatus.h
+    search/searchrule/searchrulenumerical.h
+    search/searchrule/searchruleencryption.h
+    search/searchrule/searchrulestring.h
+    search/searchpattern.h
+    search/searchpatternedit.h
+    folder/entitycollectionorderproxymodel.h
+    folder/foldercollectionmonitor.h
+    folder/foldersettings.h
+    folder/hierarchicalfoldermatcher_p.h
+    folder/foldertreewidget.h
+    folder/foldertreeview.h
+    folder/accountconfigorderdialog.h
+    folder/foldertreewidgetproxymodel.h
+    folder/folderselectiondialog.h
+    folder/folderrequester.h
+    folder/favoritecollectionorderproxymodel.h
+    mailcommon_private_export.h
+    kernel/mailkernel.h
+    snippets/snippetsmanager.h
+    snippets/snippetselectattachmentwidget.h
+    snippets/snippetattachmentwidget.h
+    snippets/snippetdialog.h
+    snippets/snippetcustomfileattachmentnamedialog.h
+    snippets/snippetcustomfileattachmentnamewidget.h
+    snippets/snippettreeview.h
+    snippets/snippetvariabledialog.h
+    snippets/snippetwidget.h
+    snippets/snippetselectattachmentdialog.h
+    snippets/snippetsmodel.h
+    interfaces/mailinterfaces.h
+    interfaces/rulewidgethandler.h
+    tag/tag.h
+    tag/addtagdialog.h
+    tag/tagwidget.h
+    collectionpage/collectionexpirywidget.h
+    collectionpage/collectiongeneralpage.h
+    collectionpage/collectionexpiryjob.h
+    collectionpage/collectionexpirypage.h
+    collectionpage/collectiongeneralwidget.h
+    collectionpage/collectionviewwidget.h
+    collectionpage/collectiontemplateswidget.h
+    collectionpage/attributes/expirecollectionattribute.h
+    widgets/redirectwidget.h
+    widgets/redirectdialog.h
+    widgets/favoritecollectionwidget.h
+    dbusoperators.h
+    util/mailutil_p.h
+    util/mailutil.h
+    util/cryptoutils.h
+    util/resourcereadconfigfile.h
+    mdn/mdnstateattribute.h
+    mdn/sendmdnhandler.h
+    mdn/mdnadvicehelper.h
     )
 
 
