Correct prefix to other PIM repositories in .kde-ci.yml

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -6,11 +6,11 @@ Dependencies:
   'require':
     'frameworks/extra-cmake-modules': '@latest'
     'frameworks/kdesignerplugin' : '@latest'
-    'kde/pim/akonadi' : '@same'
-    'kde/pim/akonadi-mime' : '@same'
-    'kde/pim/kmailtransport' : '@same'
-    'kde/pim/kmime' : '@same'
-    'kde/pim/libkdepim' : '@same'
-    'kde/pim/mailimporter' : '@same'
-    'kde/pim/messagelib' : '@same'
-    'kde/pim/pimcommon' : '@same'
+    'pim/akonadi' : '@same'
+    'pim/akonadi-mime' : '@same'
+    'pim/kmailtransport' : '@same'
+    'pim/kmime' : '@same'
+    'pim/libkdepim' : '@same'
+    'pim/mailimporter' : '@same'
+    'pim/messagelib' : '@same'
+    'pim/pimcommon' : '@same'
