--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
-
+# SPDX-License-Identifier: CC0-1.0
+# SPDX-FileCopyrightText: none
 add_definitions(-DTRANSLATION_DOMAIN=\"libmailcommon\")
 
 #add_definitions( -DQT_NO_CAST_FROM_ASCII )
