--- a/src/filter/tests/CMakeLists.txt
+++ b/src/filter/tests/CMakeLists.txt
@@ -3,8 +3,8 @@
 add_executable(filterimporterexportergui filterimporterexportergui.cpp)
 ecm_mark_as_test(filterimporterexportergui)
 target_link_libraries(filterimporterexportergui
-  Qt::Core
-  Qt::Gui
+  Qt${QT_MAJOR_VERSION}::Core
+  Qt${QT_MAJOR_VERSION}::Gui
   KF5::MailCommon
   KF5::I18n
 )
@@ -12,8 +12,8 @@ target_link_libraries(filterimporterexportergui
 add_executable(invalidfilterdialoggui invalidfilterdialoggui.cpp)
 ecm_mark_as_test(invalidfilterdialoggui)
 target_link_libraries(invalidfilterdialoggui
-  Qt::Core
-  Qt::Gui
+  Qt${QT_MAJOR_VERSION}::Core
+  Qt${QT_MAJOR_VERSION}::Gui
   KF5::MailCommon
   KF5::I18n
 )
@@ -21,8 +21,8 @@ target_link_libraries(invalidfilterdialoggui
 add_executable(mndadvicedialoggui mndadvicedialoggui.cpp)
 ecm_mark_as_test(mndadvicedialoggui)
 target_link_libraries(mndadvicedialoggui
-  Qt::Core
-  Qt::Gui
+  Qt${QT_MAJOR_VERSION}::Core
+  Qt${QT_MAJOR_VERSION}::Gui
   KF5::MailCommon
   KF5::I18n
 )
@@ -31,8 +31,8 @@ target_link_libraries(mndadvicedialoggui
 add_executable(kmfilterdialogtestgui kmfilterdialogtestgui.cpp ../../../autotests/dummykernel.cpp)
 ecm_mark_as_test(kmfilterdialogtestgui)
 target_link_libraries(kmfilterdialogtestgui
-  Qt::Core
-  Qt::Gui
+  Qt${QT_MAJOR_VERSION}::Core
+  Qt${QT_MAJOR_VERSION}::Gui
   KF5::MailCommon
   KF5::I18n
 )
@@ -40,8 +40,8 @@ target_link_libraries(kmfilterdialogtestgui
 add_executable(filteractionmissingsoundurldialogui filteractionmissingsoundurldialogui.cpp ../../../autotests/dummykernel.cpp ../dialog/filteractionmissingsoundurldialog.cpp)
 ecm_mark_as_test(filteractionmissingsoundurldialogui)
 target_link_libraries(filteractionmissingsoundurldialogui
-  Qt::Core
-  Qt::Gui
+  Qt${QT_MAJOR_VERSION}::Core
+  Qt${QT_MAJOR_VERSION}::Gui
   KF5::MailCommon
   KF5::I18n
   KF5::KIOWidgets
@@ -50,8 +50,8 @@ target_link_libraries(filteractionmissingsoundurldialogui
 add_executable(filteractionmissingtemplatedialoggui filteractionmissingtemplatedialoggui.cpp ../../../autotests/dummykernel.cpp ../dialog/filteractionmissingtemplatedialog.cpp)
 ecm_mark_as_test(filteractionmissingtemplatedialoggui)
 target_link_libraries(filteractionmissingtemplatedialoggui
-  Qt::Core
-  Qt::Gui
+  Qt${QT_MAJOR_VERSION}::Core
+  Qt${QT_MAJOR_VERSION}::Gui
   KF5::MailCommon
   KF5::I18n
   KF5::Completion
@@ -60,8 +60,8 @@ target_link_libraries(filteractionmissingtemplatedialoggui
 add_executable(filteractionmissingtransportdialoggui filteractionmissingtransportdialoggui.cpp ../../../autotests/dummykernel.cpp ../dialog/filteractionmissingtransportdialog.cpp)
 ecm_mark_as_test(filteractionmissingtransportdialoggui)
 target_link_libraries(filteractionmissingtransportdialoggui
-  Qt::Core
-  Qt::Gui
+  Qt${QT_MAJOR_VERSION}::Core
+  Qt${QT_MAJOR_VERSION}::Gui
   KF5::MailCommon
   KF5::I18n
   KF5::Completion
@@ -71,8 +71,8 @@ target_link_libraries(filteractionmissingtransportdialoggui
 add_executable(filteractionmissingaccountdialoggui filteractionmissingaccountdialoggui.cpp ../../../autotests/dummykernel.cpp  ../dialog/filteractionmissingaccountdialog.cpp)
 ecm_mark_as_test(filteractionmissingaccountdialoggui)
 target_link_libraries(filteractionmissingaccountdialoggui
-  Qt::Core
-  Qt::Gui
+  Qt${QT_MAJOR_VERSION}::Core
+  Qt${QT_MAJOR_VERSION}::Gui
   KF5::MailCommon
   KF5::I18n
   KF5::Completion
@@ -81,8 +81,8 @@ target_link_libraries(filteractionmissingaccountdialoggui
 add_executable(filteractionmissingtagdialoggui filteractionmissingtagdialoggui.cpp ../../../autotests/dummykernel.cpp ../dialog/filteractionmissingtagdialog.cpp)
 ecm_mark_as_test(filteractionmissingtagdialoggui)
 target_link_libraries(filteractionmissingtagdialoggui
-  Qt::Core
-  Qt::Gui
+  Qt${QT_MAJOR_VERSION}::Core
+  Qt${QT_MAJOR_VERSION}::Gui
   KF5::MailCommon
   KF5::I18n
   KF5::Completion
@@ -91,8 +91,8 @@ target_link_libraries(filteractionmissingtagdialoggui
 add_executable(filteractionmissingidentitydialoggui filteractionmissingidentitydialoggui.cpp ../../../autotests/dummykernel.cpp ../dialog/filteractionmissingidentitydialog.cpp)
 ecm_mark_as_test(filteractionmissingidentitydialoggui)
 target_link_libraries(filteractionmissingidentitydialoggui
-  Qt::Core
-  Qt::Gui
+  Qt${QT_MAJOR_VERSION}::Core
+  Qt${QT_MAJOR_VERSION}::Gui
   KF5::MailCommon
   KF5::I18n
   KF5::Completion
