--- a/src/collectionpage/autotests/CMakeLists.txt
+++ b/src/collectionpage/autotests/CMakeLists.txt
@@ -4,7 +4,7 @@ macro(add_mailcommon_collectionpage_test _name)
     ecm_add_test(${ARGN}
         TEST_NAME ${_name}
         NAME_PREFIX "mailcommon-collectionpage-"
-        LINK_LIBRARIES Qt::Test Qt::Gui KF5::AkonadiCore KF5::MailCommon KF5::Completion
+        LINK_LIBRARIES Qt${QT_MAJOR_VERSION}::Test Qt${QT_MAJOR_VERSION}::Gui KF5::AkonadiCore KF5::MailCommon KF5::Completion
     )
 endmacro()
 
