--- a/src/mdn/autotests/CMakeLists.txt
+++ b/src/mdn/autotests/CMakeLists.txt
@@ -3,5 +3,5 @@
 ecm_add_test(mdnstateattributetest.cpp
     TEST_NAME mdnattributetest
     NAME_PREFIX "mailcommon-mdn-"
-    LINK_LIBRARIES Qt::Test Qt::Gui KF5::AkonadiCore KF5::MailCommon
+    LINK_LIBRARIES Qt${QT_MAJOR_VERSION}::Test Qt${QT_MAJOR_VERSION}::Gui KF5::AkonadiCore KF5::MailCommon
 )
