Add missing QGpgME/gpgme++ dependency
- Implicitly used, so search for and link with it
- Minimum version taken from KMail

Signed-off-by: Andreas Sturmlechner <asturm@gentoo.org>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -348,6 +348,8 @@ PUBLIC
   KF5::PimCommonAkonadi
   KF5::Completion
 PRIVATE
+  Gpgmepp
+  QGpgme
   KF5::AkonadiWidgets
   KF5::TextWidgets
   KF5::I18n
