--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,6 +51,10 @@ set(AKONADI_VERSION "5.21.2")
 
 find_package(Qt${QT_MAJOR_VERSION} ${QT_REQUIRED_VERSION} CONFIG REQUIRED Widgets DBus Test Xml)
 
+set(GPGMEPP_LIB_VERSION "1.16.0")
+find_package(Gpgmepp ${GPGMEPP_LIB_VERSION} CONFIG REQUIRED)
+find_package(QGpgme ${GPGMEPP_LIB_VERSION} CONFIG REQUIRED)
+
 find_package(KF5Archive ${KF5_MIN_VERSION} CONFIG REQUIRED)
 find_package(KF5Completion ${KF5_MIN_VERSION} CONFIG REQUIRED)
 find_package(KF5Config ${KF5_MIN_VERSION} CONFIG REQUIRED)
