--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -14,3 +14,5 @@ Dependencies:
     'pim/mailimporter' : '@same'
     'pim/messagelib' : '@same'
     'pim/pimcommon' : '@same'
+Options:
+  require-passing-tests-on: [ 'Linux', 'FreeBSD']
